--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(beta_prior)
 export(bin_var)
 export(binary_cutoff)
 export(borrowing_details)
+export(borrowing_fixed_power_prior)
 export(borrowing_full)
 export(borrowing_hierarchical_commensurate)
 export(borrowing_none)
